# Quantum_well_simulator

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
qms/: __init__.py  __main__.py  funtions.py
qms/core/: __init__.py  hamiltonian.py  potentials.py  schrodinger.py
qms/grid/: __init__.py  grid.py  operators.py
qms/observables/: __init__.py  expectation.py  uncertainty.py
qms/pipeline/: __init__.py  simulation.py
qms/solvers/: __init__.py  eigen.py  time_evolution.py
qms/utils/: __init__.py  backend.py  io.py  logging.py  validation.py
qms/visualization/: __init__.py  animation.py  plots.py  tui.py
qms/wavefunction/: __init__.py  normalization.py  wavepacket.py
quantum_well_simulator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_smoke.py
