[project]
name = "quantum-well-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "mpmath>=1.3.0",
    "numpy>=2.4.2",
    "physipy>=0.2.8",
    "qutip>=5.2.3",
    "scipy>=1.17.1",
    "sympy>=1.14.0",
]
